# abci-examples

202307/: pyproject.toml
202307/config/: config_finetune_full_deepspeed.yaml
202307/scripts/: finetune.sh  finetune_deepspeed.sh  finetune_deepspeed_multinode.sh
202307/src/: finetune.py  generate_texts_with_rinna.py
